third_party/jerryscript/jerryscript/tests/jerry/fail/1/arguments-in-var-decl-strict.js
// SPDX-FileCopyrightText: 2014-2015 Samsung Electronics Co., Ltd.
// SPDX-License-Identifier: Apache-2.0

"use strict"

var arguments;
